fix(creditlockup): fixes alignment

--- a/src/components/CreditLockup/base.module.scss
+++ b/src/components/CreditLockup/base.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/functions/spacing';
 
 .wrapper {
+  display: block;
   line-height: 1.1;
 }
 
